# AlgorithmApp

./: CMakeLists.txt
app/: CMakeLists.txt  CollatzRunner.cpp  CollatzRunner.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt  collatz.cpp  collatz_simd.cpp  platform_compat.h
src/: CMakeCache.txt  CMakeLists.txt  run_collatz_test.cpp
src/.cmake/api/v1/reply/: error-2025-11-26T01-16-29-0498.json
src/app/: CMakeLists.txt  CollatzRunner.cpp  mainwindow.h  mainwindow.ui
src/lib/: CMakeLists.txt  collatz.cpp  collatz.h
